replace ImmutableList with List where possible