@@ -19,6 +19,7 @@
 package net.frozenblock.wilderwild.world.additions.feature;
 
 import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
 import net.frozenblock.lib.worldgen.feature.api.FrozenConfiguredFeature;
@@ -298,7 +299,7 @@ public final class WilderTreeConfigured {
 
 		BIRCH_TREE.makeAndSetHolder(Feature.TREE,
 				birch().dirt(BlockStateProvider.simple(Blocks.DIRT)).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_007
 						)
 				).build()
@@ -306,7 +307,7 @@ public final class WilderTreeConfigured {
 
 		BIRCH_BEES_0004.makeAndSetHolder(Feature.TREE,
 				birch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_007,
 								POLLEN_01
@@ -316,7 +317,7 @@ public final class WilderTreeConfigured {
 
 		BIRCH_BEES_025.makeAndSetHolder(Feature.TREE,
 				birch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_025,
 								SHELF_FUNGUS_007,
 								POLLEN_025
@@ -326,7 +327,7 @@ public final class WilderTreeConfigured {
 
 		DYING_BIRCH.makeAndSetHolder(Feature.TREE,
 				birch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_007
 						)
@@ -335,7 +336,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_BIRCH_BEES_0004.makeAndSetHolder(Feature.TREE,
 				shortBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_006,
 								POLLEN_01)
@@ -344,7 +345,7 @@ public final class WilderTreeConfigured {
 
 		SUPER_BIRCH_BEES_0004.makeAndSetHolder(Feature.TREE,
 				superBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_007,
 								POLLEN_01)
@@ -353,7 +354,7 @@ public final class WilderTreeConfigured {
 
 		DYING_SUPER_BIRCH.makeAndSetHolder(Feature.TREE,
 				superBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -362,7 +363,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_BIRCH_TREE.makeAndSetHolder(Feature.TREE,
 				fallenBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_BIRCH
 						)
@@ -381,7 +382,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
@@ -389,7 +390,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_BIRCH.makeAndSetHolder(Feature.TREE,
 				shortBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006
 						)
 				).ignoreVines().build()
@@ -397,7 +398,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_DYING_BIRCH.makeAndSetHolder(Feature.TREE,
 				shortBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006,
 								VINES_1_UNDER_260_03
 						)
@@ -406,7 +407,7 @@ public final class WilderTreeConfigured {
 
 		SUPER_BIRCH_BEES.makeAndSetHolder(Feature.TREE,
 				superBirch().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES,
 								POLLEN_025
 						)
@@ -421,7 +422,7 @@ public final class WilderTreeConfigured {
 
 		OAK.makeAndSetHolder(Feature.TREE,
 				oak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).build()
@@ -429,7 +430,7 @@ public final class WilderTreeConfigured {
 
 		SHORT_OAK.makeAndSetHolder(Feature.TREE,
 				shortOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).build()
@@ -437,7 +438,7 @@ public final class WilderTreeConfigured {
 
 		OAK_BEES_0004.makeAndSetHolder(Feature.TREE,
 				oak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								SHELF_FUNGUS_006,
 								POLLEN_01
@@ -447,7 +448,7 @@ public final class WilderTreeConfigured {
 
 		DYING_OAK.makeAndSetHolder(Feature.TREE,
 				oak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_03,
 								SHELF_FUNGUS_006
 						)
@@ -456,7 +457,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).build()
@@ -464,7 +465,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_DYING_OAK.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -473,7 +474,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_DYING_OAK_BEES_0004.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								VINES_1_UNDER_260_05,
 								POLLEN_01,
@@ -484,7 +485,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK_BEES_0004.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								POLLEN_01,
 								SHELF_FUNGUS_002
@@ -494,7 +495,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_DYING_OAK_BEES_025.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_025,
 								VINES_1_UNDER_260_05,
 								POLLEN_01,
@@ -505,7 +506,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK_BEES_025.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_025,
 								POLLEN_01,
 								SHELF_FUNGUS_002
@@ -515,7 +516,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_OAK_TREE.makeAndSetHolder(Feature.TREE,
 				fallenOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_OAK
 						)
@@ -524,7 +525,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_OAK_TREE_NO_MOSS.makeAndSetHolder(Feature.TREE,
 				fallenOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_260
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
@@ -542,7 +543,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)
@@ -561,7 +562,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)
@@ -570,7 +571,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_OAK_BEES.makeAndSetHolder(Feature.TREE,
 				fancyOak().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES,
 								POLLEN_025,
 								SHELF_FUNGUS_002
@@ -587,7 +588,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4))
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								BEES_0004,
 								VINES_1_UNDER_260_05,
 								POLLEN_01
@@ -605,7 +606,7 @@ public final class WilderTreeConfigured {
 						new DarkOakFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0)),
 						new ThreeLayersFeatureSize(1, 1, 0, 1, 2, OptionalInt.empty())
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_006
 						)
@@ -614,7 +615,7 @@ public final class WilderTreeConfigured {
 
 		TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				tallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).ignoreVines().build()
@@ -622,7 +623,7 @@ public final class WilderTreeConfigured {
 
 		FANCY_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				fancyTallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_002
 						)
 				).ignoreVines().build()
@@ -630,7 +631,7 @@ public final class WilderTreeConfigured {
 
 		DYING_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				tallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -639,7 +640,7 @@ public final class WilderTreeConfigured {
 
 		DYING_FANCY_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				fancyTallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_05,
 								SHELF_FUNGUS_007
 						)
@@ -648,7 +649,7 @@ public final class WilderTreeConfigured {
 
 		COBWEB_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				tallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								COBWEB_1_UNDER_260_025,
 								SHELF_FUNGUS_002
 						)
@@ -656,7 +657,7 @@ public final class WilderTreeConfigured {
 		);
 		COBWEB_FANCY_TALL_DARK_OAK.makeAndSetHolder(Feature.TREE,
 				fancyTallDarkOak().decorators(
-						ImmutableList.of(
+						List.of(
 								COBWEB_1_UNDER_260_025,
 								SHELF_FUNGUS_002
 						)
@@ -696,7 +697,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(2, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeaveVineDecorator(0.125F),
 								SHELF_FUNGUS_007
 						)
@@ -716,7 +717,7 @@ public final class WilderTreeConfigured {
 								UniformInt.of(2, 3)
 						),
 						new TwoLayersFeatureSize(2, 0, 2)
-				).decorators(ImmutableList.of(SHELF_FUNGUS_006_ONLY_BROWN)).ignoreVines().build()
+				).decorators(List.of(SHELF_FUNGUS_006_ONLY_BROWN)).ignoreVines().build()
 		);
 
 		SPRUCE_SHORT.makeAndSetHolder(Feature.TREE,
@@ -744,7 +745,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(2, 0, 2))
 						.decorators(
-								ImmutableList.of(
+								List.of(
 										SHELF_FUNGUS_006_ONLY_BROWN
 								)
 						).ignoreVines().build()
@@ -762,7 +763,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(2, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_1_UNDER_260_05
 						)
@@ -781,7 +782,7 @@ public final class WilderTreeConfigured {
 						),
 						new TwoLayersFeatureSize(1, 1, 2))
 						.decorators(
-								ImmutableList.of(
+								List.of(
 										new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)), SHELF_FUNGUS_006_ONLY_BROWN
 								)
 						).build()
@@ -798,7 +799,7 @@ public final class WilderTreeConfigured {
 								UniformInt.of(3, 7)
 						),
 						new TwoLayersFeatureSize(1, 1, 2))
-						.decorators(ImmutableList.of(new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)), SHELF_FUNGUS_006_ONLY_BROWN)).build()
+						.decorators(List.of(new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)), SHELF_FUNGUS_006_ONLY_BROWN)).build()
 		);
 
 		DYING_MEGA_FUNGUS_PINE.makeAndSetHolder(Feature.TREE,
@@ -809,7 +810,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(3, 7)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL)),
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_1_UNDER_260_075
@@ -819,7 +820,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_SPRUCE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenSpruce().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_1_UNDER_260_075,
 								MOSS_SPRUCE_PALM
 						)
@@ -838,7 +839,7 @@ public final class WilderTreeConfigured {
 						UniformInt.of(1, 2),
 						1
 				).ignoreVines().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_MOSSY
 						)
@@ -853,7 +854,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN
 						)
 				).build()
@@ -867,7 +868,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2))
 						.decorators(
-								ImmutableList.of(
+								List.of(
 										SHELF_FUNGUS_006_ONLY_BROWN,
 										SHELF_FUNGUS_006_ONLY_BROWN
 								)
@@ -882,7 +883,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_1_UNDER_260_075
@@ -897,7 +898,7 @@ public final class WilderTreeConfigured {
 						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(11, 14)),
 						new TwoLayersFeatureSize(1, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_1_UNDER_260_075
 						)
@@ -914,7 +915,7 @@ public final class WilderTreeConfigured {
 						new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)),
 						new TwoLayersFeatureSize(1, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new AttachedToLeavesDecorator(
 										0.065F,
 										1,
@@ -925,7 +926,7 @@ public final class WilderTreeConfigured {
 												UniformInt.of(0, 2)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -941,7 +942,7 @@ public final class WilderTreeConfigured {
 						new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)),
 						new TwoLayersFeatureSize(1, 0, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new AttachedToLeavesDecorator(
 										0.065F,
 										1,
@@ -953,7 +954,7 @@ public final class WilderTreeConfigured {
 												UniformInt.of(0, 2)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -971,7 +972,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(4, 6)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_76
 						)
 				).ignoreVines().build()
@@ -979,7 +980,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_CYPRESS_TREE.makeAndSetHolder(Feature.TREE,
 				fallenCypress().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_008_UNDER_82,
 								MOSS_CYPRESS
 						)
@@ -994,7 +995,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(6, 8)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_008_UNDER_82
 						)
@@ -1009,7 +1010,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(4, 6)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_76
 						)
 				).ignoreVines().build()
@@ -1023,7 +1024,7 @@ public final class WilderTreeConfigured {
 						new SpruceFoliagePlacer(ConstantInt.of(1), UniformInt.of(1, 3), UniformInt.of(6, 8)),
 						new TwoLayersFeatureSize(2, 1, 2)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_008_UNDER_82
 						)
@@ -1046,7 +1047,7 @@ public final class WilderTreeConfigured {
 						new RandomSpreadFoliagePlacer(ConstantInt.of(2), ConstantInt.of(1), ConstantInt.of(2), 14),
 						new TwoLayersFeatureSize(1, 0, 1)
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeaveVineDecorator(0.1F),
 								SHELF_FUNGUS_006_ONLY_BROWN,
 								VINES_008_UNDER_82
@@ -1079,7 +1080,7 @@ public final class WilderTreeConfigured {
 						4,
 						9
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeavesAroundTopTreeDecorator(
 										0.25F,
 										0,
@@ -1090,7 +1091,7 @@ public final class WilderTreeConfigured {
 												ConstantInt.of(0)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -1110,7 +1111,7 @@ public final class WilderTreeConfigured {
 						5,
 						10
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeavesAroundTopTreeDecorator(
 										0.25F,
 										0,
@@ -1121,7 +1122,7 @@ public final class WilderTreeConfigured {
 												ConstantInt.of(0)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -1149,7 +1150,7 @@ public final class WilderTreeConfigured {
 						3,
 						2
 				).decorators(
-						ImmutableList.of(
+						List.of(
 								new LeavesAroundTopTreeDecorator(
 										0.3F,
 										0,
@@ -1160,7 +1161,7 @@ public final class WilderTreeConfigured {
 												ConstantInt.of(0)
 										),
 										4,
-										ImmutableList.of(
+										List.of(
 												Direction.DOWN
 										)
 								)
@@ -1170,7 +1171,7 @@ public final class WilderTreeConfigured {
 
 		FALLEN_PALM.makeAndSetHolder(Feature.TREE,
 				fallenPalm().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_SPRUCE_PALM
 						)
@@ -1200,7 +1201,7 @@ public final class WilderTreeConfigured {
 		//JUNGLE
 		FALLEN_JUNGLE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenJungle().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_08_UNDER_260_075,
 								MOSS_JUNGLE
 						)
@@ -1210,7 +1211,7 @@ public final class WilderTreeConfigured {
 		//ACACIA
 		FALLEN_ACACIA_TREE.makeAndSetHolder(Feature.TREE,
 				fallenAcacia().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_260
 						)
 				).dirt(BlockStateProvider.simple(Blocks.DIRT)).build()
@@ -1219,7 +1220,7 @@ public final class WilderTreeConfigured {
 		//MANGROVE
 		FALLEN_MANGROVE_TREE.makeAndSetHolder(Feature.TREE,
 				fallenMangrove().decorators(
-						ImmutableList.of(
+						List.of(
 								VINES_012_UNDER_260,
 								MOSS_MOSSY
 						)
